// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailWidget renders a inline widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 jTdYlY"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 pwcCg"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cGLddP ClusterDetailWidget__Title-sc-15uj98x-0 jQdVth"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 hbGccM"
      >
        <span
          class="StyledText-sc-1sadyjn-0 hgRsLg"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailWidget renders a simple widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 jTdYlY"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 hcKcZC"
      >
        <span
          class="StyledText-sc-1sadyjn-0 cGLddP ClusterDetailWidget__Title-sc-15uj98x-0 jQdVth"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 hbGccM"
      >
        <span
          class="StyledText-sc-1sadyjn-0 hgRsLg"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;
